[tool.poetry]
name = "danbot-uptime"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
danbot-status = "^0.0.1"
Flask = "^2.0.1"
schedule = "^1.1.0"
pytz = "^2021.1"
aiohttp = "^3.7.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
